# paillier-disease-tracker

./: .gitignore  README.md  paillier-disease-tracker-web.spec  pyproject.toml
docs/: 01_tydzien_setup_i_organizacja.md  02_tydzien_podstawy_kryptografii_i_bazy.md  03_tydzien_homomorfia_i_integracja.md  04_teoria_paillier.md  05_architektura_client_server.md  06_tydzien_4_zliczanie_chorob_i_symulacja_chmury.md  07_tydzien_6_scenariusze_testowe_i_poprawki.md  08_tydzien_6_dane_wydajnosciowe.md
scripts/: build_web_exe.ps1
src/paillier_disease_tracker/: __init__.py  benchmarking.py  cli.py  config.py  data_samples.py  keys.py
src/paillier_disease_tracker/client/: __init__.py  workflow.py
src/paillier_disease_tracker/crypto/: __init__.py  paillier.py
src/paillier_disease_tracker/db/: __init__.py  database.py  lock.py  repository.py
src/paillier_disease_tracker/gui/: app.py
src/paillier_disease_tracker/server/: __init__.py  cloud_service.py
src/paillier_disease_tracker/web/: __init__.py  app.py  main.py
src/paillier_disease_tracker/web/static/: app.js  charts.js  index.html  styles.css
tests/: test_benchmarking.py  test_paillier.py  test_server_side_count.py  test_week6_scenarios.py
