[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paillier-disease-tracker"
version = "0.1.0"
description = "Privacy-preserving medical statistics using the Paillier cryptosystem"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Team Project" }]
dependencies = ["ttkbootstrap>=1.10.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
paillier-tracker = "paillier_disease_tracker.cli:main"
paillier-tracker-gui = "paillier_disease_tracker.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
